Reuploaded white queen movement

--- a/nobleza-frankie/chessboard_grid/assets/styles/scss/_visuals.scss
+++ b/nobleza-frankie/chessboard_grid/assets/styles/scss/_visuals.scss
@@ -219,6 +219,7 @@ p {
 input[type='checkbox'] {
     display: none;
 }
+//for push purposes
 
 #checkCastle:checked ~ #ccl {
     bottom: 64.75vmin;
