--- a/nobleza-frankie/landing_page/assets/styles/scss/_globals.scss
+++ b/nobleza-frankie/landing_page/assets/styles/scss/_globals.scss
@@ -1,5 +1,6 @@
 html {
     box-sizing: border-box;
+    scroll-behavior: smooth;
 }
 
 *, *::before, *::after{
@@ -10,4 +11,38 @@ body {
     margin:0;
     padding: 0;
     border: none;
+    overflow-x: hidden;
 }
+
+h1,
+h3,
+p {
+  margin:0 0 0 0;
+}
+.a-text {
+  text-decoration: none;
+  color:$white;       
+  &:visited {color:$white;} 
+  &:hover,  
+  &:active {
+    color:$yellow;
+    border-bottom: 3px solid $red;
+  }  
+}
+::-webkit-scrollbar {
+  width: 15px;
+}
+
+::-webkit-scrollbar-track {
+    background: $darkgrey; 
+    border-radius: 0px;
+  }
+   
+::-webkit-scrollbar-thumb {
+    background: $lop; 
+    border-radius: 0px;
+  }
+  
+::-webkit-scrollbar-thumb:hover {
+    background: $red; 
+  }
