landing_page: fixed header font size

--- a/nobleza-frankie/landing_page/assets/styles/scss/_footer.scss
+++ b/nobleza-frankie/landing_page/assets/styles/scss/_footer.scss
@@ -16,7 +16,7 @@ footer {
 
             input {
                 display: none;
-                height: 15vh;
+                height: 12vh;
             }
                 
             label {
@@ -122,9 +122,9 @@ footer {
                     opacity: 1;
                     height: auto;
                     font-size: 1.8vw;
-                    margin:0;
+                    margin:1vh 0;
                     padding:0;
-                    height:10vh;
+                    height:8vh;
                     visibility: visible;
                     li {
                         a {
