tic-tac-tpe: to fix UI

--- a/nobleza-frankie/tic_tac_toe/assets/styles/scss/_variables.scss
+++ b/nobleza-frankie/tic_tac_toe/assets/styles/scss/_variables.scss
@@ -4,3 +4,12 @@ $blood : #6d000c;
 $white : rgb(252,246,245);
 $silver : rgb(162, 162, 161);
 $black : rgb(45, 41, 38);
+
+
+@import url('https://fonts.googleapis.com/css2?family=Odibee+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+
+$main : 'Odibee Sans';
+$body : 'Roboto Condensed';
+$content: 'Poppins';
