--- a/nobleza-frankie/tic_tac_toe/assets/styles/styles.css
+++ b/nobleza-frankie/tic_tac_toe/assets/styles/styles.css
@@ -1,15 +1,428 @@
+@import url("https://fonts.googleapis.com/css2?family=Odibee+Sans&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
 html {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  border: none;
+  height: 100%;
+  width: 100%;
 }
 
 *, *::before, *::after {
   -webkit-box-sizing: inherit;
           box-sizing: inherit;
+  padding: 0;
+  margin: 0;
+  border: 0;
 }
 
 body {
   margin: 0;
   padding: 0;
   border: none;
+  overflow: hidden;
+  background-image: url("https://images2.alphacoders.com/100/1000061.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+
+main {
+  margin: 0;
+  padding: 0;
+  border: none;
+}
+
+button {
+  cursor: pointer;
+}
+
+body, .content, .modal {
+  height: 100%;
+  width: 100%;
+}
+
+.hide {
+  height: 0;
+  display: none;
+}
+
+.modal {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-size: 1.1rem;
+  -webkit-transition: all 1s ease;
+  transition: all 1s ease;
+  background-image: url("https://wallpapercave.com/wp/wp2630800.jpg");
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+}
+.modal .modal-container {
+  width: 40vw;
+  padding: 15px 10px;
+  background-color: #a2a2a1;
+  border: 3px solid #2d2926;
+}
+.modal .modal-container .modal-title {
+  font-size: 2rem;
+  text-align: center;
+  padding: 0 10px 20px 10px;
+  font-family: "Odibee Sans";
+}
+.modal .modal-container .form-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding: 0 5%;
+}
+.modal .modal-container .form-container .form-item {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-right: -5px;
+  margin-bottom: 5px;
+}
+.modal .modal-container .form-container .form-item .label {
+  display: inline-block;
+  width: 50%;
+  vertical-align: bottom;
+  font-family: "Poppins";
+}
+.modal .modal-container .form-container .form-item #form-first-move,
+.modal .modal-container .form-container .form-item #form-opponent-selection,
+.modal .modal-container .form-container .form-item #form-grid-size {
+  font-size: 1.3rem;
+  width: 50%;
+  text-align: center;
+  border: 2px solid black;
+  font-family: "Poppins";
+  margin: 0;
+}
+.modal .modal-container .form-container .form-submit {
+  font-size: 1.3rem;
+  margin-top: 20px;
+  padding: 20px;
+  -ms-flex-item-align: center;
+      align-self: center;
+  background-color: white;
+  border: 3px solid black;
+  -webkit-transition: all 0.1s;
+  transition: all 0.1s;
+}
+.modal .modal-container .form-container .form-submit:hover {
+  -webkit-box-shadow: 0.3rem 0.3rem 0 black;
+          box-shadow: 0.3rem 0.3rem 0 black;
+  -webkit-transform: translate(-0.2rem, -0.2rem);
+          transform: translate(-0.2rem, -0.2rem);
+}
+
+/* General Content Containers */
+.content-top {
+  height: 5%;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.title {
+  margin-top: 10htmlpx;
+  font-size: 1.8rem;
+  font-weight: bolder;
+  text-shadow: 1px 3px 3px var(--modal-moving-color2);
+}
+
+.title-desc {
+  font-size: 0.9rem;
+  display: none;
+}
+
+/* content-center: players top and bottom */
+.content-center {
+  height: auto;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  text-align: center;
+}
+
+.center-left {
+  /* width: 100%; */
+  height: 15%;
+}
+
+.center-middle {
+  /* width: 100%; */
+  height: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+/* GRID BOARD */
+.grid-container {
+  height: 95vmin;
+  width: 95vmin;
+  display: grid;
+  border: 2px solid black;
+}
+
+/* Grid Items */
+.grid-item {
+  font-weight: bold;
+  background-color: whitesmoke;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  border: 1px solid black;
+}
+
+.hover {
+  cursor: pointer;
+}
+
+.hover:hover {
+  opacity: 0.9;
+}
+
+.center-right {
+  /* width: 100%; */
+  height: 15%;
+}
+
+/* Avatars and content */
+.center-left, .center-right {
+  padding-top: 5px;
+  padding-bottom: 5px;
+  display: grid;
+  grid-template-columns: 1fr auto 80px 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
+  grid-template-areas: ". avatar title ." ". avatar mark ." ". avatar wins .";
+}
+
+.center-right {
+  grid-template-areas: ". title avatar ." ". mark avatar ." ". wins avatar .";
+}
+
+.content-title {
+  grid-area: title;
+  align-self: flex-end;
+  font-weight: bold;
+}
+
+.content-desc {
+  grid-area: mark;
+}
+
+.content-avatar {
+  grid-area: avatar;
+  height: 60px;
+  width: 60px;
+  background-color: white;
+  border: 3px solid black;
+  background-image: url("https://cdn.icon-icons.com/icons2/1674/PNG/512/person_110935.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  margin-left: auto;
+  margin-right: auto;
+  align-self: center;
+}
+
+.content-wins {
+  grid-area: wins;
+  font-size: 0.85rem;
+}
+
+.content-bottom {
+  height: 10%;
+  width: 100%;
+  text-align: center;
+}
+
+.content-message {
+  font-size: 1.5rem;
+  font-weight: bold;
+  padding-top: 5px;
+  padding-bottom: 10px;
+}
+
+.controls {
+  font-size: inherit;
+  font-family: inherit;
+  padding: 5px;
+  margin: 3px;
+  background-color: white;
+  border: 2px solid black;
+}
+
+.controls:hover {
+  -webkit-box-shadow: 0.05rem 0.05rem 0 black;
+          box-shadow: 0.05rem 0.05rem 0 black;
+  -webkit-transform: translate(-0.05rem, -0.05rem);
+          transform: translate(-0.05rem, -0.05rem);
+}
+
+.controls:active {
+  -webkit-box-shadow: 0 0 0 black;
+          box-shadow: 0 0 0 black;
+  -webkit-transform: translate(0, 0);
+          transform: translate(0, 0);
+}
+
+@media screen and (min-width: 360px) {
+  html {
+    font-size: 20px;
+  }
+
+  .modal-container {
+    padding-left: 8px;
+    padding-right: 8px;
+    padding-bottom: 15px;
+  }
+
+  .form-item label {
+    width: 210px;
+  }
+
+  .grid-container {
+    height: 52vmax;
+    width: 52vmax;
+  }
+}
+/* content-center: players left and right */
+@media screen and (min-width: 600px) {
+  .modal-container {
+    padding-left: 15px;
+    padding-right: 15px;
+    padding-bottom: 25px;
+  }
+
+  #form-opponent-selection {
+    width: auto;
+  }
+
+  .form-item label {
+    width: 230px;
+  }
+
+  /* MAIN CONTENTS */
+  .content-top {
+    height: 15%;
+    width: 100%;
+  }
+
+  .title-desc {
+    display: initial;
+  }
+
+  .content-center {
+    height: 65%;
+    width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    text-align: center;
+  }
+
+  .center-left {
+    height: 100%;
+    width: 20%;
+  }
+
+  .center-middle {
+    height: 100%;
+    width: 60%;
+  }
+
+  .grid-container {
+    height: 64vmin;
+    width: 64vmin;
+  }
+
+  .center-right {
+    height: 100%;
+    width: 20%;
+  }
+
+  /* Avatars and content */
+  .center-left, .center-right {
+    display: unset;
+  }
+
+  .content-avatar {
+    height: 75px;
+    width: 75px;
+    margin-top: 10px;
+    margin-bottom: 5px;
+  }
+
+  .content-bottom {
+    height: 20%;
+    width: 100%;
+    text-align: center;
+  }
+}
+/* ANIMATION */
+@-webkit-keyframes slide {
+  from {
+    background-position: 0 0;
+  }
+  to {
+    background-position: -120px 60px;
+  }
+}
+@keyframes slide {
+  from {
+    background-position: 0 0;
+  }
+  to {
+    background-position: -120px 60px;
+  }
 }/*# sourceMappingURL=styles.css.map */
