tic-tac-toe: finished layout

--- a/nobleza-frankie/tic_tac_toe/assets/styles/scss/_globals.scss
+++ b/nobleza-frankie/tic_tac_toe/assets/styles/scss/_globals.scss
@@ -19,6 +19,7 @@ body {
     padding: 0;
     border: none;
     overflow: hidden;
+    color:$white;
     background-image: url("https://images2.alphacoders.com/100/1000061.png");
     background-size: cover;
     background-repeat: no-repeat;
