--- a/nobleza-frankie/tic_tac_toe/assets/styles/scss/_variables.scss
+++ b/nobleza-frankie/tic_tac_toe/assets/styles/scss/_variables.scss
@@ -1,7 +1,8 @@
 $red : rgb(153, 0, 17);
 $lightred : #b60014;
-$blood : #6d000c;
 $white : rgb(252,246,245);
+$lop : 	rgba(245, 245, 245, 0.8);
+$smoke: #f5f5f5;
 $silver : rgb(162, 162, 161);
 $black : rgb(45, 41, 38);
 
