--- a/nobleza-frankie/tic_tac_toe/assets/styles/styles.scss
+++ b/nobleza-frankie/tic_tac_toe/assets/styles/styles.scss
@@ -2,5 +2,4 @@
 @import "scss/maps";
 @import "scss/mixins";
 @import "scss/globals";
-@import "scss/modal";
-@import "scss/board";
+@import "scss/visuals";
