--- a/nobleza-frankie/tic_tac_toe/assets/styles/scss/_visuals.scss
+++ b/nobleza-frankie/tic_tac_toe/assets/styles/scss/_visuals.scss
@@ -34,6 +34,7 @@
             text-transform: uppercase;
             text-align: center;
             letter-spacing: .5rem;
+            vertical-align: text-bottom;
         }
 
         .form-container {
@@ -231,9 +232,17 @@
             
             h1 {
                 font-family: $body;
+                padding-bottom: 2vh;
             }
             #history {
                 font-family: $content;
+                overflow: auto;
+                max-height: 50vh;
+                p {
+                    font-family: $body;
+                    margin: 0.5vh 0;
+                    color:$smoke;
+                }
             }
 
         }
@@ -310,92 +319,3 @@
             }
         }    
 }
-
-// @media screen and (min-width: 360px) {
-
-//     html {
-//         font-size: 20px
-//     }
-
-//     .modal-container {
-//         padding-left: 8px;
-//         padding-right: 8px;
-//         padding-bottom: 15px;
-//     }
-
-//     .form-item label {
-//         width: 210px;
-//     }
-
-//     .grid-container {
-//         height: 52vmax;
-//         width: 52vmax;
-//     }
-// }
-// @media screen and (min-width: 600px) {
-    
-//     .modal-container {
-//         padding-left: 15px;
-//         padding-right: 15px;
-//         padding-bottom: 25px;
-//     }
-
-//     .content-top {
-//         height: 15%;
-//         width: 100%;
-//     }
-
-//         .title-desc {
-//             display: initial;
-//             margin-left: auto;
-//             margin-right: auto;
-//         }
-
-//     .content-center {
-//         height: 65%;
-//         width: 100%;
-//         display: flex;
-//         flex-direction: row;
-//         text-align: center;
-//     }
-    
-//         .center-left {
-//             height: 100%;
-//             width: 25%;
-//             font-family: $body;
-//         }
-
-//         .center-middle {
-//             height: 100%;
-//             width: 50%;
-//         }
-
-//             .grid-container {
-//                 height: 64vmin;
-//                 width: 64vmin;
-//             }
-
-//         .center-right {
-//             height: 100%;
-//             width: 25%;
-//             font-family: $body;
-//         }
-
-//         /* Avatars and content */
-//         .center-left, .center-right {
-//             display: unset;
-//         }
-
-//         .content-avatar {
-//             height: 75px;
-//             width: 75px;
-//             margin-top: 10px;
-//             margin-bottom: 5px;
-//         }
-
-//     .content-bottom {
-//         height: 20%;
-//         width: 100%;
-//         text-align: center;
-//     }
-// }
