--- a/nobleza-frankie/tic_tac_toe/assets/styles/styles.css
+++ b/nobleza-frankie/tic_tac_toe/assets/styles/styles.css
@@ -88,6 +88,7 @@ body, .content, .modal {
   text-transform: uppercase;
   text-align: center;
   letter-spacing: 0.5rem;
+  vertical-align: text-bottom;
 }
 .modal .modal-container .form-container {
   display: -webkit-box;
@@ -284,9 +285,17 @@ body, .content, .modal {
 }
 .content .content-center .center-right h1 {
   font-family: "Roboto Condensed";
+  padding-bottom: 2vh;
 }
 .content .content-center .center-right #history {
   font-family: "Poppins";
+  overflow: auto;
+  max-height: 50vh;
+}
+.content .content-center .center-right #history p {
+  font-family: "Roboto Condensed";
+  margin: 0.5vh 0;
+  color: #f5f5f5;
 }
 .content .content-desc {
   grid-area: mark;
